--- a/.github/workflows/alerting-ci.yml
+++ b/.github/workflows/alerting-ci.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       # ---------------------------
-      # Python tests (headless matplotlib)
+      # Python tests (headless matplotlib) + fjern konfliktpakker
       # ---------------------------
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -46,6 +46,11 @@ jobs:
 
       - name: Headless backend for matplotlib
         run: echo "MPLBACKEND=Agg" >> $GITHUB_ENV
+
+      # Nogle Ubuntu-runnere har "pandas-ta/numba" liggende i layer-cache;
+      # det konflikter med coverage v7 => afinstaller defensivt.
+      - name: Ensure pandas-ta not present
+        run: pip uninstall -y pandas-ta numba || true
 
       - name: Run pytest (quiet)
         run: pytest -q
@@ -82,13 +87,13 @@ jobs:
             sh -lc '
               set -euo pipefail
               apk add --no-cache gettext >/dev/null
-              # Render KUN variabelnavne (vigtigt: enkelt-anførselstegn)
+              # Render KUN de to forventede variabler (vigtigt: enkelt-anførselstegn)
               envsubst '"'"'${TELEGRAM_BOT_TOKEN} ${TELEGRAM_CHAT_ID}'"'"' \
                 </tmpl/alertmanager.yml.tmpl \
                 > /amcfg/alertmanager.yml
               echo "[CI] Rendered /amcfg/alertmanager.yml (first 30 lines):"
               head -n 30 /amcfg/alertmanager.yml || true
-              # Quick sanity: tjek at tokens er ikke-tomme i filer
+              # Sanity: tjek at felterne findes
               grep -q "bot_token:" /amcfg/alertmanager.yml
               grep -q "chat_id:" /amcfg/alertmanager.yml
             '
