.github/workflows/observability.yml

--- a/.github/workflows/observability.yml
+++ b/.github/workflows/observability.yml
@@ -164,9 +164,10 @@ jobs:
             prom/prometheus:v2.53.0 \
             check rules /etc/prometheus/recording_rules.yml
 
-      # Hold observability-jobbet hurtigt: kør kun metrics-testen her
-      - name: Run tests (metrics only)
-        run: pytest -q tests/test_metrics_exposition.py
+      # ✅ Kør kun metrics-smoke og slå coverage fra (overrider pytest.ini addopts)
+      - name: Run tests (metrics only, no coverage gate)
+        run: |
+          pytest -q -p no:cov -o addopts='' tests/test_metrics_exposition.py
 
       - name: Upload metrics and logs (artifact)
         if: always()
