--- a/ops/compose/docker-compose.yml
+++ b/ops/compose/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports: ["8000:8000"]
     restart: unless-stopped
     networks: [obsnet]
-    # Hjælper Prometheus/compose-integration: app er klar når /healthz svarer
+    # App er klar når /healthz svarer
     healthcheck:
       test: ["CMD-SHELL","wget -qO- http://127.0.0.1:8000/healthz >/dev/null 2>&1 || exit 1"]
       interval: 10s
@@ -52,7 +52,7 @@ services:
     restart: "no"
     networks: [obsnet]
 
-  # Alertmanager – også valgfri via samme profil.
+  # Alertmanager – valgfri via samme profil.
   alertmanager:
     profiles: ["alerting"]
     image: prom/alertmanager:v0.27.0
@@ -93,14 +93,15 @@ services:
       - ../prometheus/recording_rules.yml:/etc/prometheus/recording_rules.yml:ro
       - ./data/prometheus:/prometheus
     ports: ["9090:9090"]
-    # Behold kun afhængighed til app; Alertmanager er valgfri
+    # Vent på at app'en er healthy før Prometheus starter
     depends_on:
-      - live_connector
+      live_connector:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       obsnet:
         aliases: ["prometheus"]
-    # VIGTIGT: readiness, så workflow ikke cURL'er for tidligt
+    # Readiness, så workflow ikke cURL'er for tidligt
     healthcheck:
       test: ["CMD-SHELL","wget -qO- http://127.0.0.1:9090/-/ready >/dev/null 2>&1 || exit 1"]
       interval: 10s
@@ -108,7 +109,7 @@ services:
       retries: 30
       start_period: 20s
 
-  # Grafana – ikke nødvendig i CI; lægges i separat profil.
+  # Grafana – ikke nødvendig i CI; separat profil.
   grafana:
     profiles: ["ui"]
     image: grafana/grafana:latest
